# GoogleTestExample

./: CMakeLists.txt  README.md  main.c
Modules/: CMakeLists.txt  module1.c  module1.h
Tests/: CMakeLists.txt  test.cpp
